# templat

./: pyproject.toml
templat/core/: settings.py
templat/managers/: __init__.py  async_s3_manager.py
templat/security/: self_security.py  third_security.py
